--- a/fis-org-lookup-service/src/main/resources/static/index.html
+++ b/fis-org-lookup-service/src/main/resources/static/index.html
@@ -37,7 +37,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "/api/api-doc";
+        url = "/camel/api-doc";
       }
 
       hljs.configure({
